--- a/project-type/concept-art/feed/index.html
+++ b/project-type/concept-art/feed/index.html
@@ -12,7 +12,7 @@
 	<atom:link href="https://awesometramp.github.io/awesometramp/project-type/concept-art/feed/" rel="self" type="application/rss+xml" />
 	<link>http://awesometramp.github.io/awesometramp/</link>
 	<description>Personal Art Portfolio</description>
-	<lastBuildDate>Sat, 21 May 2022 15:12:12 +0000</lastBuildDate>
+	<lastBuildDate>Sun, 22 May 2022 11:11:47 +0000</lastBuildDate>
 	<language>en-US</language>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
@@ -20,6 +20,23 @@
 	1	</sy:updateFrequency>
 	<generator>https://wordpress.org/?v=5.9.3</generator>
 	<item>
+		<title>shaman</title>
+		<link>https://awesometramp.github.io/awesometramp/portfolio/shaman/</link>
+					<comments>https://awesometramp.github.io/awesometramp/portfolio/shaman/#respond</comments>
+		
+		<dc:creator><![CDATA[admin]]></dc:creator>
+		<pubDate>Sun, 22 May 2022 11:10:54 +0000</pubDate>
+				<guid isPermaLink="false">https://awesometramp.github.io/awesometramp/?post_type=portfolio&#038;p=392</guid>
+
+					<description><![CDATA[]]></description>
+										<content:encoded><![CDATA[]]></content:encoded>
+					
+					<wfw:commentRss>https://awesometramp.github.io/awesometramp/portfolio/shaman/feed/</wfw:commentRss>
+			<slash:comments>0</slash:comments>
+		
+		
+			</item>
+		<item>
 		<title>Sadhu</title>
 		<link>https://awesometramp.github.io/awesometramp/portfolio/sadhu/</link>
 					<comments>https://awesometramp.github.io/awesometramp/portfolio/sadhu/#respond</comments>
